--- a/index.html
+++ b/index.html
@@ -6,42 +6,71 @@
     <title>Coming Soon</title>
     <style>
       body {
-        text-align: center;
-        padding: 150px;
+        font-family: Arial, sans-serif;
+        background-color: #1a3441; /* Dark bluish background */
+        color: #fff; /* White text */
+        padding: 2px;
+        align-items: center;
+        justify-content: center;
+        display: flex;
+        /* horizontal center */
+        flex-direction: column;
       }
-      h1 {
-        font-size: 50px;
+
+      .logo {
+        width: 60%;
+        height: auto;
+        padding-top: 1vh;
       }
-      body {
-        font: 20px Helvetica, sans-serif;
-        color: #333;
-      }
-      article {
-        display: block;
-        text-align: left;
-        width: 650px;
+
+      .logo img {
         margin: 0 auto;
+        width: 100%;
+        height: auto;
+        padding-top: 10vh;
       }
-      a {
-        color: #dc8100;
-        text-decoration: none;
+
+      .content {
+        max-width: 600px;
+        margin: 0 auto;
+        /* margin-top: 1vh; */
+        font-size: 20px; /* Larger font size */
+        padding-right: 20px;
+        padding-left: 20px;
       }
-      a:hover {
-        color: #333;
-        text-decoration: none;
+
+      @media (max-width: 768px) {
+        .logo {
+          width: 100%;
+          height: auto;
+          padding-top: 1vh;
+        }
+        .logo img {
+          width: 100%;
+          height: auto;
+          padding-top: 10vh;
+        }
+        .content {
+          margin-top: 0vh;
+          font-size: 18px; /* Slightly smaller font size for mobile */
+        }
       }
     </style>
   </head>
   <body>
-    <article>
-      <h1>Coming Soon</h1>
-      <div>
-        <p>
-          We're working hard to finish the development of this site. Sign up
-          below to receive updates and to be notified when we launch!
-        </p>
-        <p>&mdash; The Team</p>
-      </div>
-    </article>
+    <div class="logo">
+      <img src="./images/gagalingosplash.svg" alt="Logo" />
+    </div>
+    <div class="content">
+      <h1>We're working on something exciting!</h1>
+      <p>
+        Our website is under construction, but we're working hard to create
+        something fantastic. If you need more information or have any questions,
+        please feel free to email us at
+        <a href="mailto:info@example.com" style="color: #dc8100"
+          >info@gagalingo.com</a
+        >.
+      </p>
+    </div>
   </body>
 </html>
