--- a/index.html
+++ b/index.html
@@ -7,20 +7,25 @@
     <style>
       body {
         font-family: Arial, sans-serif;
-        background-color: #1a3441; /* Dark bluish background */
-        color: #fff; /* White text */
+        color: #1a3441; /* Dark bluish background */
+        background-color: #fff; /* White text */
         padding: 2px;
         align-items: center;
         justify-content: center;
         display: flex;
-        /* horizontal center */
         flex-direction: column;
       }
 
+      h1 {
+        text-align: center;
+        font-size: 32px;
+      }
+
       .logo {
-        width: 60%;
+        /* width: 60%; */
         height: auto;
         padding-top: 1vh;
+        max-width: 600px;
       }
 
       .logo img {
@@ -33,7 +38,6 @@
       .content {
         max-width: 600px;
         margin: 0 auto;
-        /* margin-top: 1vh; */
         font-size: 20px; /* Larger font size */
         padding-right: 20px;
         padding-left: 20px;
@@ -41,14 +45,14 @@
 
       @media (max-width: 768px) {
         .logo {
-          width: 100%;
+          width: 80%;
           height: auto;
-          padding-top: 1vh;
+          padding-top: 5vh;
         }
         .logo img {
           width: 100%;
           height: auto;
-          padding-top: 10vh;
+          padding-top: 1vh;
         }
         .content {
           margin-top: 0vh;
@@ -59,7 +63,7 @@
   </head>
   <body>
     <div class="logo">
-      <img src="./images/gagalingosplash.svg" alt="Logo" />
+      <img src="./images/logobunny.png" alt="Logo" />
     </div>
     <div class="content">
       <h1>We're working on something exciting!</h1>
