--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <img src="./images/logobunny.png" alt="Logo" />
     </div>
     <div class="content">
-      <h1>We're working on something exciting!</h1>
+      <h1>We're working on something exciting</h1>
       <p>
         Our website is under construction, but we're working hard to create
         something fantastic. If you need more information or have any questions,
